   o add context menu item to assign selected elements to the current selected layer.

- when exporting/importing a POV file, the custom user settings per table are now also exported/imported
- when importing a primitive mesh, there is now a new option that prevents internal reordering/optimization of the data

- add MP3 and OGG support (via the BASS library) to the sound manager and the 'standard' sound commands
  these new file types are now also saved directly into the VPX file, unlike the music commands (which still use the 'music' folder for legacy reasons)
  Going forward, tables should only use the sound commands and not the music commands anymore

- add WEBP to list of supported image formats

- optimize table loading/pre-processing time
- optimize loading of JPG images in the table
- reduce temporary memory needed for images

- add table save date and revision to table info and also show this in the pause info/menu

- add new plunger option: Enable 1s retract
  The plunger will move forth and back between the maximum and minimum position, allowing for a retry, if the desired firing position has been missed.
  Useful for button/key plunging and is now the new default.

- add Inder/Playmatic trigger mesh

- make debug text/FPS output adapt to resolution and rotation

- the script editor now works in UTF-8 mode and also saves it like that (note though that VBS itself may not digest all of UTF-8!)

- improve quality and performance of internal DMD shader (especially visible on FSS tables)

- support to add custom notes to a table. To open a dockable notes dialog use the menu View -> Notes. Any text that was entered there is saved with the current active table.

- add ElasticityFalloff to the wall physics properties

FIXES:

- fix problem with gate animations introduced in 10.1 when the open/close script functions were used before

- fix issue where saving a table can cost up to 4x (8x on 64bit) the temporary memory
