@@ -51,8 +51,8 @@ Private Sub Class1812ShowDips
 	If Not IsObject(vpmDips) Then ' First time
 		Set vpmDips = New cvpmDips
 		With vpmDips
-	  	.AddForm  80, 0, "Option Menu"
-		.AddLabel 0,0,250,20, "No Options In This Table At This Time"
+		.AddForm  80, 0, "Option Menu"
+		.AddLabel 0,0,250,20,"No Options In This Table At This Time"
 		End With
 	End If
 	vpmDips.ViewDips
